k8s/simple/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoweb 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoweb
  template:
    metadata:
      labels:
        app: demoweb 
    spec:
      containers:
      - name: demoweb
        image: peihsinsu/demoweb
        resources:
          requests:
            cpu: 200m
        ports:
        - containerPort: 80
