k8s/simple/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoweb
  #annotations:
    #external-dns.alpha.kubernetes.io/hostname: demoweb.arecord.us
spec:
  selector:
    app: demoweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
