k8s/simple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoweb
spec:
  defaultBackend:
    service:
      name: demoweb 
      port:
        number: 80
